<resources>
    <string name="app_name">思维国际</string>
    <!--tab标签-->
    <string name="include_tab_button_home_text">首页</string>
    <string name="include_tab_button_customer_text">顾客</string>
    <string name="include_tab_button_read_text">阅读</string>
    <string name="include_tab_button_hairdresser_text">发型师</string>

    <string name="name">姓名&#160;&#160;&#160;&#160;</string>
    <string name="phone">电话&#160;&#160;&#160;&#160;</string>
    <string name="type">类型&#160;&#160;&#160;&#160;</string>

    <!--headTitle标题-->
    <string name="head_title_return">返回</string>
    <string name="head_title_home">首页</string>
    <string name="head_title_customer">顾客</string>
    <string name="head_title_read">阅读</string>
    <string name="head_title_hairdresser">发型师</string>
    <string name="head_title_add_form">添加流水单</string>
    <string name="head_title_setting">设置</string>
    <string name="head_title_company_profile">公司简介</string>
    <string name="head_title_perm_dye">烫染记录</string>
    <string name="head_title_hairdressing">美容记录</string>
    <string name="head_title_nutrition">营养记录</string>
    <string name="head_title_spa">头皮SPA</string>
    <string name="head_title_details">产品资料</string>
    <string name="head_title_details_details">详细资料</string>
    <string name="head_title_birthday_remind">生日提醒</string>
    <string name="head_title_hair_style_img">发型图片</string>
    <string name="head_title_product">产品资料</string>
    <string name="head_title_new_user">添加会员</string>
    <string name="head_title_new_record">添加记录</string>
    <string name="head_title_expire">到期顾客</string>
    <string name="head_title_subscribe">预约顾客</string>
    <string name="head_title_account_book">流水单</string>

    <!--首页固定文字-->
    <string name="fragment_home_today_hint">今日提示</string>
    <!--阅读固定文字-->
    <string name="fragment_read_productInformation">产品资料</string>
    <string name="fragment_read_hairSstyleImg">发型图片</string>
    <!--发型师固定文字-->


    <!--登录固定文字-->
    <string name="activity_login_account">用户名：</string>
    <string name="activity_login_account_hint">请输入用户名</string>
    <string name="activity_login_password">密&#160;&#160;&#160;&#160;码：</string>
    <string name="activity_login_password_hint">请输入密码</string>
    <string name="activity_login_login">登&#160;&#160;&#160;&#160;录</string>
    <string name="activity_login_remember">记住密码</string>
    <string name="activity_login_forget">忘记密码？</string>

    <!--烫染记录-->
    <string name="activity_perm_dye_name">贵&#160;&#160;宾</string>
    <string name="activity_perm_dye_number">卡&#160;&#160;号</string>
    <string name="activity_perm_dye_variety">卡&#160;&#160;类</string>
    <!--顾客详细信息-->
    <string name="activity_details_guest">贵&#160;&#160;宾&#160;&#160;</string>
    <string name="activity_details_cardnumber">卡&#160;&#160;号&#160;&#160;</string>
    <string name="activity_details_cardvariety">卡&#160;&#160;类&#160;&#160;</string>
    <string name="activity_details_gender">性&#160;&#160;别&#160;&#160;&#160;&#160;</string>
    <string name="activity_details_birthday">生&#160;&#160;日&#160;&#160;&#160;&#160;</string>
    <string name="activity_details_quality">品&#160;&#160;质&#160;&#160;&#160;&#160;</string>
    <string name="activity_details_hairlength">发&#160;&#160;长&#160;&#160;&#160;&#160;</string>
    <string name="activity_details_phone">电&#160;&#160;话&#160;&#160;&#160;&#160;</string>
    <string name="activity_details_date">日&#160;&#160;期&#160;&#160;&#160;&#160;</string>
    <string name="activity_details_project">项&#160;&#160;目&#160;&#160;&#160;&#160;</string>
    <string name="activity_details_hairstylistname">发&#160;型&#160;师&#160;&#160;&#160;&#160;</string>
    <string name="activity_details_product">使用产品&#160;&#160;&#160;&#160;</string>
    <string name="activity_details_storesuse">店&#160;&#160;用&#160;&#160;&#160;&#160;</string>
    <string name="activity_details_furnishing">家&#160;&#160;居&#160;&#160;&#160;&#160;</string>
    <string name="activity_details_diagnosis">诊断头皮&#160;&#160;&#160;&#160;</string>
    <string name="activity_details_product2">产&#160;&#160;品&#160;&#160;&#160;&#160;</string>
    <string name="activity_details_type">类&#160;&#160;型&#160;&#160;&#160;&#160;</string>
    <string name="activity_details_satisfaction">满&#160;意&#160;度&#160;&#160;&#160;&#160;</string>
    <string name="activity_details_mask">发&#160;&#160;膜&#160;&#160;&#160;&#160;</string>
    <string name="activity_details_assistant">助&#160;&#160;理&#160;&#160;&#160;&#160;</string>
    <string name="activity_details_appointmenttime">下次预约时间&#160;&#160;&#160;&#160;</string>
    <string name="activity_details_appointmentperson">预&#160;约&#160;人&#160;&#160;&#160;&#160;</string>
    <string name="activity_details_analyze">进入分析</string>
    <string name="activity_details_remind">提醒设置</string>

    <!--生日提示-->
    <string name="adapter_birthday_activity_listview_today">今天是&#160;&#160;</string>
    <string name="adapter_birthday_activity_listview_line">\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="adapter_birthday_activity_listview_age">岁生日</string>

    <!--公司简介-->
    <string name="activity_company_profile">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;山东至信信息科技有限公司是一家集软件研发、系统集成、互联网服务为一体的综合性高新技术企业，公司注册资金500万元，现有专业技术人员56人。\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;设有日照国际海洋城和岚山区两个分公司，一个智慧城市研发中心，公司业务涵盖省内外300多家政府机关及企事业单位，主营业务涉及智慧政务、智慧民生、智慧教育、智慧社区、智慧旅游和智慧应急调度等领域。公司积极响应国家信息化战略和产业发展要求，以“城市让生活更美好”为目标，以“推进智慧城市建设”为己任，为推进智慧城市发展提供全面的技术解决方案。</string>

    <!-- 签名 -->
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>

    <!--业绩查询-->
    <string name="check_achievement_title">业绩查询</string>
    <string name="check_achievement_week">按周</string>
    <string name="check_achievement_perm">烫发</string>
    <string name="check_achievement_color">染发</string>
    <string name="check_achievement_nursing">护理</string>
    <string name="check_achievement_finish">已完成</string>
    <string name="check_achievement_quantity">%</string>
    <!-- 关于 -->
    <string name="setting_about_title">关于</string>
    <string name="setting_about_company">XXX有限公司</string>
    <string name="setting_about_website"><a href="http://www.baidu.com/"> http://www.baidu.com/ </a></string>
    <!-- 建议反馈 -->
    <string name="setting_feedback_title">建议与反馈</string>
    <string name="setting_feedback_opinion">请填写您的意见或者建议</string>
    <string name="loading_press">请稍候，正在提交...</string>
    <!-- 修改密码 -->
    <string name="setting_pwd">更改密码</string>
</resources>
