<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.eron.hairdresser.views.headTitle.HeadTitle xmlns:title="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_spa_HeadTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        title:imgLeft="@mipmap/head_title_return"
        title:titleCenter="@string/head_title_spa"
        title:titleLeft="@string/head_title_customer"
        title:titleRight="@string/head_title_new_record" />

    <ListView
        android:id="@+id/activity_spa_ListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:scrollbars="none" />
</LinearLayout>