<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <com.eron.hairdresser.views.headTitle.HeadTitle
        xmlns:title="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_details_HeadTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:layout_alignParentTop="true"
        title:imgLeft="@mipmap/head_title_return"
        title:titleCenter="@string/head_title_details"
        title:titleLeft="@string/head_title_return" />

    <LinearLayout
        android:id="@+id/activity_details_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:layout_width="@dimen/dimen_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/button_color"
            android:text="@string/activity_details_analyze"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <View
            android:layout_width="@dimen/dimen_0.5"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <Button
            android:layout_width="@dimen/dimen_0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/button_color"
            android:text="@string/activity_details_remind"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/fragment_customer_ListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/activity_details_LinearLayout"
        android:layout_below="@id/activity_details_HeadTitle"
        android:divider="@null"
        android:dividerHeight="@dimen/dimen_10"
        android:scrollbars="none" />
</RelativeLayout>
