<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen_30">

        <ImageView
            android:layout_width="@dimen/dimen_150"
            android:layout_height="@dimen/dimen_150"
            android:layout_gravity="center"
            android:src="@mipmap/logo" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_40"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dimen_5"
        android:paddingLeft="@dimen/dimen_20"
        android:paddingRight="@dimen/dimen_20">

        <ImageView
            android:layout_width="@dimen/dimen_25"
            android:layout_height="@dimen/dimen_25"
            android:src="@mipmap/img_activity_login_account" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/dimen_10"
            android:text="@string/activity_login_account"
            android:textColor="@color/text_color"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/activity_login_Account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@null"
            android:hint="@string/activity_login_account_hint"
            android:paddingLeft="@dimen/dimen_10"
            android:singleLine="true"
            android:textColor="@color/text_color"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dimen_5"
        android:paddingLeft="@dimen/dimen_20"
        android:paddingRight="@dimen/dimen_10"
        android:paddingTop="@dimen/dimen_10">

        <ImageView
            android:layout_width="@dimen/dimen_25"
            android:layout_height="@dimen/dimen_25"
            android:src="@mipmap/img_activity_login_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/dimen_10"
            android:text="@string/activity_login_password"
            android:textColor="@color/text_color"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/activity_login_Password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/activity_login_password_hint"
            android:paddingLeft="@dimen/dimen_10"
            android:password="true"
            android:singleLine="true"
            android:textColor="@color/text_color"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/activity_login_Visible"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:padding="@dimen/dimen_5"
            android:src="@drawable/selector_activity_login_eye" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/activity_login_Login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50"
            android:layout_marginLeft="@dimen/dimen_40"
            android:layout_marginRight="@dimen/dimen_40"
            android:layout_marginTop="@dimen/dimen_30"
            android:background="@drawable/selector_activity_login_login"
            android:text="@string/activity_login_login"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_20"
        android:paddingRight="@dimen/dimen_10"
        android:paddingTop="@dimen/dimen_10">

        <CheckBox
            android:id="@+id/activity_login_Remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:checked="false"
            android:text="@string/activity_login_remember"
            android:textColor="@color/text_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/activity_login_Forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/activity_login_forget"
            android:textColor="@color/text_color"
            android:textSize="15sp" />
    </RelativeLayout>
</LinearLayout>
