<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <com.eron.hairdresser.views.headTitle.HeadTitle xmlns:title="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        title:titleCenter="@string/head_title_read" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <GridView
                android:id="@+id/fragment_read_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:background="@color/background"
                android:horizontalSpacing="@dimen/dimen_1"
                android:numColumns="3"
                android:paddingTop="@dimen/dimen_10"
                android:scrollbars="none"
                android:stretchMode="columnWidth" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40"
                android:layout_marginTop="@dimen/dimen_10"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dimen_20"
                android:text="@string/fragment_read_productInformation"
                android:textColor="@color/text_color"
                android:textSize="18sp" />

            <GridView
                android:id="@+id/fragment_read_centre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:background="@color/background"
                android:horizontalSpacing="@dimen/dimen_10"
                android:numColumns="3"
                android:paddingLeft="@dimen/dimen_10"
                android:paddingRight="@dimen/dimen_10"
                android:scrollbars="none"
                android:stretchMode="columnWidth" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40"
                android:layout_marginTop="@dimen/dimen_10"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dimen_20"
                android:text="@string/fragment_read_hairSstyleImg"
                android:textColor="@color/text_color"
                android:textSize="18sp" />

            <GridView
                android:id="@+id/fragment_read_down"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:numColumns="3"
                android:scrollbars="none"
                android:stretchMode="columnWidth" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
