<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_15"
        android:background="@color/white"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0.5"
            android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_60"
            android:background="@color/tab_background_color"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/include_tab_button_Home"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/include_tab_button_Home_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:background="#00000000"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@drawable/selector_include_tab_button_home_image" />

                <TextView
                    android:id="@+id/include_tab_button_Home_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:text="@string/include_tab_button_home_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/include_tab_button_Customer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/include_tab_button_Customer_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:background="#00000000"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@drawable/selector_include_tab_button_customer_image" />

                <TextView
                    android:id="@+id/include_tab_button_Customer_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:text="@string/include_tab_button_customer_text" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" />

            <LinearLayout
                android:id="@+id/include_tab_button_Read"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/include_tab_button_Read_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:background="#00000000"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@drawable/selector_include_tab_button_read_image" />

                <TextView
                    android:id="@+id/include_tab_button_Read_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:text="@string/include_tab_button_read_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/include_tab_button_Hairdresser"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/include_tab_button_Hairdresser_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:background="#00000000"
                    android:focusable="false"
                    android:scaleType="centerInside"
                    android:src="@drawable/selector_include_tab_button_hairdresser_image" />

                <TextView
                    android:id="@+id/include_tab_button_Hairdresser_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color"
                    android:text="@string/include_tab_button_hairdresser_text" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/include_tab_button_Hairdresser_ImageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@mipmap/img_tab_button_plus_circle" />

        <ImageView
            android:layout_width="@dimen/dimen_22"
            android:layout_height="@dimen/dimen_22"
            android:layout_gravity="center"
            android:src="@mipmap/img_tab_button_plus" />
    </FrameLayout>
</FrameLayout>